<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旅游笔记本</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logging">登 陆</string>
    <string name="register">注 册</string>
    <string name="item1">风景</string>
    <string name="item2">美食</string>
    <string name="item3">生活</string>
    <string name="mail">邮箱</string>
    <string name="neckname">昵称</string>
    <string name="password">密码</string>
    <string name="repassword">确认密码</string>
    <string name="searchfor">搜索地区、景区</string>
    <string name="finish">完成</string>
    <string name="newdiary">最新游记</string>
    <string name="homepage_btn_window_string">      快来选择你感兴趣的游记吧！</string>
    <string name="new_diary">创建新的游记</string>
    <string name="activity_logging_register_text">您的旅行从此变得更美</string>
    <string name="activity_logging_text">新的旅程将从这里开始</string>
    <string name="mlistview_header_hint_normal">下拉刷新</string>
    <string name="mlistview_header_hint_ready">松开刷新数据</string>
    <string name="mlistview_header_hint_loading">正在加载…</string>
    <string name="mlistview_header_last_time">上次更新时间：</string>
    <string name="mlistview_footer_hint_normal">查看更多</string>
    <string name="mlistview_footer_hint_ready">松开载入更多</string>
    <string name="me_dairy_gallery_title">和闺蜜的一次旅行</string>
    <string name="edit_success_content">分享心情更美</string>
    <string name="edit_label_content">标签</string>
    <string name="me_mycollection_label">我的收藏</string>
    <string name="me_mydairy_label">我的游记</string>
    <string name="me_pesonal_info_1">修改头像</string>
    <string name="me_pesonal_info_2">修改昵称</string>
    <string name="me_pesonal_info_3">修改账号</string>
    <string name="me_pesonal_info_4">修改密码</string>
    <string name="me_pesonal_info_5">意见反馈</string>
    <string name="me_dairy_gallery_share_sharebtn">分享到朋友圈</string>
    <string name="me_dairy_gallery_share_sendbtn">发送给朋友</string>
    <string name="me_feedback_text_hint">请写您的宝贵意见</string>
    <string name="me_nickname_text_hint">新昵称</string>
    <string name="me_account_text_hint">新账号</string>
    <string name="me_password_text_hint">新密码</string>
    <string name="me_password_retext_hint">确认密码</string>
    <string name="activity_image_picker_name">图片</string>
    <string name="activity_image_picker_filename">所有图片</string>
    <string name="activity_edit_content">看到的美好事物是…</string>
    <string name="activity_image_picker_pre_btn">预览</string>
    

</resources>
