<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logging_background" >
    <LinearLayout 
        android:layout_weight="1"
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="vertical"
	    android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="14sp"
            android:textColor="#fff"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/hello_world"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_logging_register_text"
            android:textSize="18sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_weight="1"
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="vertical"
	    android:gravity="center">
        <Button
	        android:id="@+id/logging_btn"
	        android:layout_width="@dimen/choose_logging_btn_width"
	        android:layout_height="@dimen/choose_logging_btn_height"
	        android:contentDescription="@string/hello_world"
	        android:background="@drawable/activity_logging_btn_bg_bg"
	        android:text="@string/logging"
	        android:textSize="18sp"
	        android:textColor="@color/sea_blue"
	        android:textStyle="bold"
	        />
        <!-- <ImageButton
	        android:id="@+id/logging_btn"
	        android:layout_width="@dimen/choose_logging_btn_width"
	        android:layout_height="@dimen/choose_logging_btn_height"
	        android:contentDescription="@string/hello_world"
	        android:background="@drawable/logging_btn_choose_bg"/> -->
        <!-- <ImageButton
	        android:id="@+id/register_btn"
	        android:layout_width="@dimen/choose_logging_btn_width"
	        android:layout_height="@dimen/choose_logging_btn_height"
	        android:contentDescription="@string/hello_world"
	        android:scaleType="fitCenter"
	        android:background="@drawable/register_btn_choose_bg"
	        android:layout_marginTop="20dp"></ImageButton> -->
	    <Button
	        android:id="@+id/register_btn"
	        android:layout_width="@dimen/choose_logging_btn_width"
	        android:layout_height="@dimen/choose_logging_btn_height"
	        android:contentDescription="@string/hello_world"
	        android:scaleType="fitCenter"
	        android:background="@drawable/activity_logging_btn_bg_bg"
	        android:layout_marginTop="20dp"
	        android:text="@string/register"
	        android:textSize="18sp"
	        android:textColor="@color/sea_blue"
	        android:textStyle="bold"></Button>
    </LinearLayout>

</LinearLayout>
