<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_title_height"
    	android:background="@drawable/logging_background">
        
        <ImageView
            android:id="@+id/activity_image_picker_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/hello_world"
            android:scaleType="fitCenter"
            android:layout_marginBottom="3dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_image_picker_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/activity_image_picker_back_btn"
            android:layout_centerVertical="true"/>
        <Button 
            android:id="@+id/activity_image_picker_finishbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <GridView
        android:id="@+id/activity_image_picker_gridview"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="3"
        android:listSelector="@android:color/transparent"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:clipChildren="true"
        android:cacheColorHint="@android:color/transparent"
        android:background="@color/white"
        android:padding="5dp"></GridView>
    <RelativeLayout
        android:id="@+id/activity_image_picker_bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_title_height"
        android:gravity="center_vertical"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">
        <TextView 
            android:id="@+id/activity_image_picker_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_image_picker_filename"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_image_picker_pre_btn"
                android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
