<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    <RelativeLayout 
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_title_height"
		android:background="@drawable/logging_background">
        
        <ImageView
            android:id="@+id/me_feedback_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/hello_world"
            android:scaleType="fitCenter"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_pesonal_info_5"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_centerInParent="true">
            
        </TextView>
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/me_feedback_text_hint"
            android:textSize="18sp"
            android:padding="5dp"/>
    </LinearLayout>

</LinearLayout>
