<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/logging_background"
     >
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
        android:paddingTop="10dp">
	    <RelativeLayout 
	        android:id="@+id/layout1"
	        android:layout_width="@dimen/logging_btn_width"
	        android:layout_height="@dimen/logging_write_window"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingLeft="10dp"
        	android:paddingRight="10dp"
		    android:background="@drawable/logging_write_window"
		    android:layout_centerHorizontal="true">
		    <com.scnu.yxp.travelapp.view.EmailAutoCompleteTextView 
		        android:id="@+id/mail"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:textColor="#000"
		        android:hint="@string/mail"
		        android:background="@drawable/gray_edittext_bg"/>
		    <EditText 
		        android:id="@+id/password"
		        android:inputType="textPassword"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:hint="@string/password"
		        android:layout_below="@id/mail"
		        android:background="@drawable/gray_edittext_bg"
		        android:layout_marginTop="15dp"
		        android:textColor="#000"/>
	    </RelativeLayout>
        
		<Button 
		    android:id="@+id/logging_btn"
		    android:layout_width="@dimen/logging_btn_width"
		    android:layout_height="@dimen/logging_btn_height"
		    android:layout_below="@id/layout1"
		    android:contentDescription="@string/hello_world"
		    android:background="@drawable/activity_logging_btn_bg_bg"
		    android:scaleType="fitStart"
		    android:layout_marginTop="15dp"
		    android:layout_centerHorizontal="true"
	        android:text="@string/logging"
	        android:textSize="18sp"
	        android:textColor="@color/sea_blue"
	        android:textStyle="bold"
		    />
		<!-- <ImageButton 
		    android:id="@+id/logging_btn"
		    android:layout_width="@dimen/logging_btn_width"
		    android:layout_height="@dimen/logging_btn_height"
		    android:layout_below="@id/layout1"
		    android:contentDescription="@string/hello_world"
		    android:background="@drawable/logging_btn_bg"
		    android:scaleType="fitStart"
		    android:layout_marginTop="15dp"
		    android:layout_centerHorizontal="true"
		    /> -->
		
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="vertical"
	    android:layout_weight="1.4"
	    android:gravity="center">
		<TextView 
		    android:id="@+id/activity_logging_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/activity_logging_text"
		    android:textColor="#fff"
		    android:textSize="18sp"/>
		<ImageView
		    android:id="@+id/plane"
		    android:layout_width="@dimen/logging_btn_width"
		    android:layout_height="match_parent"
		    android:scaleType="centerInside"
		    android:background="@drawable/plane_move9"
		    android:contentDescription="@string/hello_world"/>
    </LinearLayout>
	
</LinearLayout>