<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"       
   >
   <!-- 必须外加一层，才可以在style中继承dialog时防止布局大小改变 -->
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:id="@+id/me_setting_page_parentLayout"  >
	    <LinearLayout
	        android:id="@+id/me_setting_page_layout"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/homepage_title_height"
	        android:orientation="horizontal">
	        
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@id/me_setting_page_layout"
	        android:layout_alignParentRight="true">
	        <LinearLayout 
	        	android:id="@+id/me_setting_page_layout1"
		        android:layout_width="150dp"
		        android:layout_height="50dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:padding="8dp"
		        android:background="@drawable/me_person_message_window">
	        	<com.scnu.yxp.travelapp.view.PhotoImageView
	        	    android:id="@+id/me_setting_page_image1"
		            android:layout_width="30dp"
		            android:layout_height="30dp"
		            android:src="@drawable/daxiong"
		            android:scaleType="centerInside"></com.scnu.yxp.travelapp.view.PhotoImageView>
	        	<TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/me_pesonal_info_1"
	                android:textColor="#000"
	                android:textSize="18sp"
	                android:layout_marginLeft="15dp"/>
	    	</LinearLayout>
	    	<LinearLayout 
	        	android:id="@+id/me_setting_page_layout2"
		        android:layout_width="150dp"
		        android:layout_height="50dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:padding="8dp"
		        android:background="@drawable/me_person_message_window">
	        	<TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/me_pesonal_info_2"
	                android:textColor="#000"
	                android:textSize="18sp"
	                android:layout_marginLeft="15dp"/>
	    	</LinearLayout>
	    	<LinearLayout 
	        	android:id="@+id/me_setting_page_layout3"
		        android:layout_width="150dp"
		        android:layout_height="50dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:padding="8dp"
		        android:background="@drawable/me_person_message_window">
	        	<TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/me_pesonal_info_3"
	                android:textColor="#000"
	                android:textSize="18sp"
	                android:layout_marginLeft="15dp"/>
	    	</LinearLayout>
	    	<LinearLayout 
	        	android:id="@+id/me_setting_page_layout4"
		        android:layout_width="150dp"
		        android:layout_height="50dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:padding="8dp"
		        android:background="@drawable/me_person_message_window">
	        	<TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/me_pesonal_info_4"
	                android:textColor="#000"
	                android:textSize="18sp"
	                android:layout_marginLeft="15dp"/>
	    	</LinearLayout>
	    	<LinearLayout 
	        	android:id="@+id/me_setting_page_layout5"
		        android:layout_width="150dp"
		        android:layout_height="50dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:padding="8dp"
		        android:background="@drawable/me_person_message_window">
	        	<TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/me_pesonal_info_5"
	                android:textColor="#000"
	                android:textSize="18sp"
	                android:layout_marginLeft="15dp"/>
	    	</LinearLayout>
	    	
	    </LinearLayout>
	
	</RelativeLayout>
</RelativeLayout>
